# ShaderHub

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
shaders/: demo.frag  kishimisu.frag  raymarching.frag
src/: main.cpp
